# api/routes.go
@@ -12,10 +12,10 @@ import (
 	"sync"
 
 	gin "github.com/gin-gonic/gin"
-	providers "github.com/inference-gateway/inference-gateway/api/providers"
 	config "github.com/inference-gateway/inference-gateway/config"
 	l "github.com/inference-gateway/inference-gateway/logger"
 	otel "github.com/inference-gateway/inference-gateway/otel"
+	providers "github.com/inference-gateway/inference-gateway/providers"
 	semconv "go.opentelemetry.io/otel/semconv/v1.17.0"
 	trace "go.opentelemetry.io/otel/trace"
 )
@@ -248,24 +248,8 @@ func fetchModels(url string, provider string, wg *sync.WaitGroup, ch chan<- Mode
 	ch <- ModelResponse{Provider: provider, Models: response.Data}
 }
 
-type GenerateRequest struct {
-	Model  string `json:"model"`
-	Prompt string `json:"prompt"`
-}
-
-type ResponseTokens struct {
-	Role    string `json:"role"`
-	Model   string `json:"model"`
-	Content string `json:"content"`
-}
-
-type GenerateResponse struct {
-	Provider string         `json:"provider"`
-	Response ResponseTokens `json:"response"`
-}
-
 func (router *RouterImpl) GenerateProvidersTokenHandler(c *gin.Context) {
-	var req GenerateRequest
+	var req providers.GenerateRequest
 	if err := json.NewDecoder(c.Request.Body).Decode(&req); err != nil {
 		c.JSON(http.StatusBadRequest, ErrorResponse{Error: "Failed to decode request"})
 		return
@@ -299,9 +283,9 @@ func (router *RouterImpl) GenerateProvidersTokenHandler(c *gin.Context) {
 	}
 
 	provider.URL = provider.ProxyURL + url
-	var response GenerateResponse
+	var response providers.GenerateResponse
 
-	response, err := generateToken(provider, req.Model, req.Prompt)
+	response, err := generateTokens(provider, req.Model, req.Messages)
 	if err != nil {
 		router.logger.Error("failed to generate tokens", err, "provider", provider)
 		c.JSON(http.StatusInternalServerError, ErrorResponse{Error: "Failed to generate tokens"})
@@ -311,13 +295,15 @@ func (router *RouterImpl) GenerateProvidersTokenHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
-func generateToken(provider *Provider, model string, prompt string) (GenerateResponse, error) {
+func generateTokens(provider *Provider, model string, messages []providers.GenerateMessage) (providers.GenerateResponse, error) {
 	var payload interface{}
 	var response interface{}
 	var role, content string
 
 	switch provider.Name {
 	case "Ollama":
+		// Ollama expects a single prompt
+		prompt := messages[len(messages)-1].Content
 		payload = providers.GenerateRequestOllama{
 			Model:  model,
 			Prompt: prompt,
@@ -326,27 +312,19 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 		response = &providers.GenerateResponseOllama{}
 	case "Groq":
 		payload = providers.GenerateRequestGroq{
-			Model: model,
-			Messages: []providers.GenerateRequestGroqMessage{
-				{
-					Role:    "user",
-					Content: prompt,
-				},
-			},
+			Model:    model,
+			Messages: messages,
 		}
 		response = &providers.GenerateResponseGroq{}
 	case "OpenAI":
 		payload = providers.GenerateRequestOpenAI{
-			Model: model,
-			Messages: []providers.GenerateRequestOpenAIMessage{
-				{
-					Role:    "user",
-					Content: prompt,
-				},
-			},
+			Model:    model,
+			Messages: messages,
 		}
 		response = &providers.GenerateResponseOpenAI{}
 	case "Google":
+		// Google expects a different format
+		prompt := messages[len(messages)-1].Content
 		payload = providers.GenerateRequestGoogle{
 			Contents: providers.GenerateRequestGoogleContents{
 				Parts: []providers.GenerateRequestGoogleParts{
@@ -358,39 +336,41 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 		}
 		response = &providers.GenerateResponseGoogle{}
 	case "Cloudflare":
+		// Cloudflare expects a single prompt
+		var prompt string
+		if len(messages) > 1 && messages[0].Role == "system" {
+			prompt = messages[0].Content + "\n\n" + messages[len(messages)-1].Content
+		} else {
+			prompt = messages[len(messages)-1].Content
+		}
 		payload = providers.GenerateRequestCloudflare{
 			Prompt: prompt,
 		}
 		response = &providers.GenerateResponseCloudflare{}
 	case "Cohere":
-		payload = &providers.GenerateRequestCohere{
-			Model: model,
-			Messages: []providers.GenerateRequestCohereMessage{
-				{
-					Role:    "user",
-					Content: prompt,
-				},
-			},
+		payload = providers.GenerateRequestCohere{
+			Model:    model,
+			Messages: messages,
 		}
 		response = &providers.GenerateResponseCohere{}
 	default:
-		return GenerateResponse{}, errors.New("provider not implemented")
+		return providers.GenerateResponse{}, errors.New("provider not implemented")
 	}
 
 	payloadBytes, err := json.Marshal(payload)
 	if err != nil {
-		return GenerateResponse{}, err
+		return providers.GenerateResponse{}, err
 	}
 
 	resp, err := http.Post(provider.URL, "application/json", strings.NewReader(string(payloadBytes)))
 	if err != nil {
-		return GenerateResponse{}, err
+		return providers.GenerateResponse{}, err
 	}
 	defer resp.Body.Close()
 
 	err = json.NewDecoder(resp.Body).Decode(response)
 	if err != nil {
-		return GenerateResponse{}, err
+		return providers.GenerateResponse{}, err
 	}
 
 	switch provider.Name {
@@ -400,7 +380,7 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 			role = "assistant" // It's not provided by Ollama so we set it to assistant
 			content = ollamaResponse.Response
 		} else {
-			return GenerateResponse{}, errors.New("invalid response from Ollama")
+			return providers.GenerateResponse{}, errors.New("invalid response from Ollama")
 		}
 	case "Groq":
 		groqResponse := response.(*providers.GenerateResponseGroq)
@@ -408,7 +388,7 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 			role = groqResponse.Choices[0].Message.Role
 			content = groqResponse.Choices[0].Message.Content
 		} else {
-			return GenerateResponse{}, errors.New("invalid response from Groq")
+			return providers.GenerateResponse{}, errors.New("invalid response from Groq")
 		}
 	case "OpenAI":
 		openAIResponse := response.(*providers.GenerateResponseOpenAI)
@@ -416,7 +396,7 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 			role = openAIResponse.Choices[0].Message.Role
 			content = openAIResponse.Choices[0].Message.Content
 		} else {
-			return GenerateResponse{}, errors.New("invalid response from OpenAI")
+			return providers.GenerateResponse{}, errors.New("invalid response from OpenAI")
 		}
 	case "Google":
 		googleResponse := response.(*providers.GenerateResponseGoogle)
@@ -424,7 +404,7 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 			role = googleResponse.Candidates[0].Content.Role
 			content = googleResponse.Candidates[0].Content.Parts[0].Text
 		} else {
-			return GenerateResponse{}, errors.New("invalid response from Google")
+			return providers.GenerateResponse{}, errors.New("invalid response from Google")
 		}
 	case "Cloudflare":
 		cloudflareResponse := response.(*providers.GenerateResponseCloudflare)
@@ -432,7 +412,7 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 			role = "assistant"
 			content = cloudflareResponse.Result.Response
 		} else {
-			return GenerateResponse{}, errors.New("invalid response from Cloudflare")
+			return providers.GenerateResponse{}, errors.New("invalid response from Cloudflare")
 		}
 	case "Cohere":
 		cohereResponse := response.(*providers.GenerateResponseCohere)
@@ -440,11 +420,11 @@ func generateToken(provider *Provider, model string, prompt string) (GenerateRes
 			role = cohereResponse.Message.Role
 			content = cohereResponse.Message.Content[0].Text
 		} else {
-			return GenerateResponse{}, errors.New("invalid response from Cohere")
+			return providers.GenerateResponse{}, errors.New("invalid response from Cohere")
 		}
 	}
 
-	return GenerateResponse{Provider: provider.Name, Response: ResponseTokens{
+	return providers.GenerateResponse{Provider: provider.Name, Response: providers.ResponseTokens{
 		Role:    role,
 		Model:   model,
 		Content: content,
